--- a/P1.ipynb
+++ b/P1.ipynb
@@ -66,7 +66,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -83,22 +83,6 @@
    "metadata": {},
    "source": [
     "## Read in an Image"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "#reading in an image\n",
-    "image = mpimg.imread('test_images/solidWhiteRight.jpg')\n",
-    "\n",
-    "#printing out some stats and plotting\n",
-    "print('This image is:', type(image), 'with dimensions:', image.shape)\n",
-    "plt.imshow(image)  # if you wanted to show a single color channel image called 'gray', for example, call as plt.imshow(gray, cmap='gray')"
    ]
   },
   {
@@ -255,12 +239,12 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
     "import os\n",
-    "os.listdir(\"test_images/\")"
+    "imagesToTest = os.listdir(\"test_images/\")\n"
    ]
   },
   {
@@ -283,13 +267,251 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: Build your pipeline that will draw lane lines on the test_images\n",
-    "# then save them to the test_images directory."
+    "\n",
+    "xPosBtmList=[]\n",
+    "yPosBtmList=[]\n",
+    "xPosTopList=[]\n",
+    "yPosTopList=[]\n",
+    "\n",
+    "xNegBtmList=[]\n",
+    "yNegBtmList=[]\n",
+    "xNegTopList=[]\n",
+    "yNegTopList=[]\n",
+    "\n",
+    "listLength = 10\n",
+    "\n",
+    "\n",
+    "xPosTopPrev = 0\n",
+    "yPosTopPrev = 0\n",
+    "xPosBtmPrev = 0\n",
+    "yPosBtmPrev = 0\n",
+    "\n",
+    "xNegTopPrev = 0\n",
+    "yNegTopPrev = 0\n",
+    "xNegBtmPrev = 0\n",
+    "yNegBtmPrev = 0\n",
+    "\n",
+    "\n",
+    "def process_image(image):\n",
+    "    # NOTE: The output you return should be a color image (3 channel) for processing video below\n",
+    "    # TODO: put your pipeline here,\n",
+    "    # you should return the final output (image where lines are drawn on lanes)\n",
+    "    \n",
+    "    hsv = cv2.cvtColor(image, cv2.COLOR_BGR2HSV)\n",
+    "    lower_white = np.array([210,100,130])\n",
+    "    upper_white = np.array([255,250,255])\n",
+    "    \n",
+    "    # Threshold the HSV image to get only white colors\n",
+    "    mask = cv2.inRange(image, lower_white, upper_white)\n",
+    "    # Bitwise-AND mask and original image\n",
+    "    res = cv2.bitwise_and(image,image, mask= mask)\n",
+    "    kernel = np.ones((5,5), np.uint8)\n",
+    "    img_dilation = cv2.dilate(res, kernel, iterations=2)\n",
+    "\n",
+    "    imgFiltered = cv2.inRange(image,np.array((220,0,0)),np.array((255,255,255)))\n",
+    "    kernel = np.ones((5,5), np.uint8)\n",
+    "    imgDilated = cv2.dilate(imgFiltered, kernel, iterations=1)\n",
+    "   \n",
+    "\n",
+    "    # Define our parameters for Canny and apply\n",
+    "    low_threshold = 50\n",
+    "    high_threshold = 150\n",
+    "    edges = cv2.Canny(imgDilated, low_threshold, high_threshold)\n",
+    "\n",
+    "    \n",
+    "    # Next we'll create a masked edges image using cv2.fillPoly()\n",
+    "    mask = np.zeros_like(edges)   \n",
+    "    ignore_mask_color = 255   \n",
+    "\n",
+    "    # This time we are defining a four sided polygon to mask\n",
+    "    imshape = image.shape\n",
+    "    vertices = np.array([[(0,imshape[0]),(450, 290), (490, 290), (imshape[1],imshape[0])]], dtype=np.int32)\n",
+    "    cv2.fillPoly(mask, vertices, ignore_mask_color)\n",
+    "    masked_edges = cv2.bitwise_and(edges, mask)\n",
+    "\n",
+    "    # Define the Hough transform parameters\n",
+    "    # Make a blank the same size as our image to draw on\n",
+    "    rho = 2 # distance resolution in pixels of the Hough grid\n",
+    "    theta = np.pi/180 # angular resolution in radians of the Hough grid\n",
+    "    threshold = 15     # minimum number of votes (intersections in Hough grid cell)\n",
+    "    min_line_length = 15 #minimum number of pixels making up a line\n",
+    "    max_line_gap =20 # maximum gap in pixels between connectable line segments\n",
+    "    line_image = np.copy(image)*0 # creating a blank to draw lines on\n",
+    "    \n",
+    "    # Run Hough on edge detected image\n",
+    "    # Output \"lines\" is an array containing endpoints of detected line segments\n",
+    "    lines = cv2.HoughLinesP(masked_edges, rho, theta, threshold, np.array([]),\n",
+    "                                min_line_length, max_line_gap)\n",
+    "\n",
+    "    slopePosCount = 0 \n",
+    "    slopeNegCount = 0\n",
+    "    slopePosSum   = 0 \n",
+    "    slopeNegSum   = 0 \n",
+    "\n",
+    "    slopePos = 0 \n",
+    "    slopeNeg = 0\n",
+    "    xPosAvg = 0\n",
+    "    yPosAvg = 0 \n",
+    "    xNegAvg = 0 \n",
+    "    yNegAvg = 0 \n",
+    "\n",
+    "    for line in lines:\n",
+    "        \n",
+    "        for x1,y1,x2,y2 in line:\n",
+    "            distance = np.sqrt((x1-x2)*(x1-x2) + (y1-y2)*(y1-y2) )\n",
+    "            slope = ((y2-y1)/(x2-x1))\n",
+    "        if (distance < 10):\n",
+    "                continue     \n",
+    "        #filter out the lines that are too \"horizontal\"\n",
+    "        if(np.abs(slope)< 0.2 or np.abs(slope)>10):\n",
+    "            continue\n",
+    "        \n",
+    "        for x1,y1,x2,y2 in line:\n",
+    "\n",
+    "            if slope >= 0:               \n",
+    "                slopePosSum += slope\n",
+    "                xPosAvg = xPosAvg + x1 + x2\n",
+    "                yPosAvg = yPosAvg + y1 + y2\n",
+    "                slopePosCount += 1\n",
+    "                #cv2.line(line_image,(x1,y1),(x2,y2),(2,0,255),10)\n",
+    "            else:\n",
+    "                 \n",
+    "                slopeNegSum   += slope\n",
+    "                xNegAvg = xNegAvg + x1 + x2\n",
+    "                yNegAvg = yNegAvg + y1 + y2\n",
+    "                slopeNegCount += 1\n",
+    "                #if (x1 > 800):\n",
+    "                #    cv2.line(line_image,(x1,y1),(x2,y2),(255,0,25),10)\n",
+    "                #else:\n",
+    "                #    cv2.line(line_image,(x1,y1),(x2,y2),(2,255,0),10)\n",
+    "    if slopePosCount > 0:\n",
+    "        slopePos = slopePosSum/slopePosCount\n",
+    "        xPosAvg = int(xPosAvg/(2*slopePosCount))\n",
+    "        yPosAvg = int(yPosAvg/(2*slopePosCount))\n",
+    "    if slopeNegCount > 0:\n",
+    "        slopeNeg = slopeNegSum/slopeNegCount\n",
+    "        xNegAvg = int(xNegAvg/(2*slopeNegCount))\n",
+    "        yNegAvg = int(yNegAvg/(2*slopeNegCount))\n",
+    "\n",
+    "    height, width = image.shape[:2]\n",
+    "    \n",
+    "    \n",
+    "    yCenterAvg = int((yPosAvg+yNegAvg)/2)\n",
+    "    fovUnder = height - yCenterAvg\n",
+    "    yUpper = yCenterAvg - int((fovUnder)/3)\n",
+    "    \n",
+    "    if (yUpper < int(height/2)):\n",
+    "        yUpper= int(height/2)\n",
+    "    \n",
+    "    if (slopePos == 0 ):\n",
+    "        xPosTop = 0\n",
+    "        yPosTop = 0\n",
+    "        xPosBtm = 0\n",
+    "        yPosBtm = 0\n",
+    "    else:\n",
+    "        yPosTop = yUpper\n",
+    "        xPosTop = xPosAvg - int((yPosAvg - yPosTop)/slopePos)\n",
+    "        yPosBtm = height\n",
+    "        xPosBtm = xPosAvg - int((yPosAvg - yPosBtm)/slopePos)\n",
+    "        \n",
+    "        xPosTopPrev = xPosTop\n",
+    "        yPosTopPrev = yPosTop\n",
+    "        xPosBtmPrev = xPosBtm\n",
+    "        yPosBtmPrev = yPosBtm\n",
+    "\n",
+    "\n",
+    "    if (slopeNeg==0):\n",
+    "        yNegTop = yNegTopPrev\n",
+    "        xNegTop = xNegTopPrev\n",
+    "        yNegBtm = yNegBtmPrev\n",
+    "        xNegBtm = xNegBtmPrev\n",
+    "    else:        \n",
+    "        yNegTop = yUpper\n",
+    "        xNegTop = xNegAvg - int((yNegAvg - yNegTop)/slopeNeg)\n",
+    "        yNegBtm = height\n",
+    "        xNegBtm = xNegAvg - int((yNegAvg - yNegBtm)/slopeNeg)\n",
+    "        \n",
+    "        xNegTopPrev = xPosTop\n",
+    "        yNegTopPrev = yPosTop\n",
+    "        xNegBtmPrev = xPosBtm\n",
+    "        yNegBtmPrev = yPosBtm\n",
+    "\n",
+    "    \n",
+    "    if (len(xPosBtmList)==0):\n",
+    "        xPosBtmList.append(xPosBtm)\n",
+    "        yPosBtmList.append(yPosBtm)\n",
+    "        xPosTopList.append(xPosTop)\n",
+    "        yPosTopList.append(yPosTop)\n",
+    "\n",
+    "        xNegBtmList.append(xNegBtm)\n",
+    "        yNegBtmList.append(yNegBtm)\n",
+    "        xNegTopList.append(xNegTop)\n",
+    "        yNegTopList.append(yNegTop)\n",
+    "\n",
+    "    \n",
+    "    if (len(xPosBtmList)>listLength):\n",
+    "        xPosBtmList.pop(0)\n",
+    "    \n",
+    "    if (len(yPosBtmList)>listLength):\n",
+    "        yPosBtmList.pop(0)\n",
+    "    \n",
+    "    if (len(xPosTopList)>listLength):\n",
+    "        xPosTopList.pop(0)\n",
+    "   \n",
+    "    if (len(yPosTopList)>listLength):\n",
+    "        yPosTopList.pop(0)\n",
+    "        \n",
+    "    if (len(xNegBtmList)>listLength):\n",
+    "        xNegBtmList.pop(0)   \n",
+    "\n",
+    "    if (len(yNegBtmList)>listLength):\n",
+    "        yNegBtmList.pop(0)  \n",
+    "        \n",
+    "    if (len(xNegTopList)>listLength):\n",
+    "        xNegTopList.pop(0)  \n",
+    "        \n",
+    "    if (len(yNegTopList)>listLength):\n",
+    "        yNegTopList.pop(0)     \n",
+    "    \n",
+    "    \n",
+    "    xPosTopMean = int(np.mean(xPosTopList)) \n",
+    "    yPosTopMean = int(np.mean(yPosTopList))\n",
+    "    xPosBtmMean = int(np.mean(xPosBtmList))\n",
+    "    yPosBtmMean = int(np.mean(yPosBtmList))    \n",
+    "    xNegTopMean = int(np.mean(xNegTopList))\n",
+    "    yNegTopMean = int(np.mean(yNegTopList))\n",
+    "    xNegBtmMean = int(np.mean(xNegBtmList))\n",
+    "    yNegBtmMean = int(np.mean(yNegBtmList))\n",
+    "    \n",
+    "    \n",
+    "    xPosTopSmooth = xPosTopMean + int((xPosTopMean-xPosTop)/listLength)\n",
+    "    yPosTopSmooth = yPosTopMean + int((yPosTopMean-yPosTop)/listLength)\n",
+    "    xPosBtmSmooth = xPosBtmMean + int((xPosBtmMean-xPosBtm)/listLength)\n",
+    "    yPosBtmSmooth = yPosBtmMean + int((yPosBtmMean-yPosBtm)/listLength)    \n",
+    "    xNegTopSmooth = xNegTopMean + int((xNegTopMean-xNegTop)/listLength)\n",
+    "    yNegTopSmooth = yNegTopMean + int((yNegTopMean-xNegTop)/listLength)\n",
+    "    xNegBtmSmooth = xNegBtmMean + int((yNegBtmMean-xNegBtm)/listLength)\n",
+    "    yNegBtmSmooth = yNegBtmMean + int((yNegBtmMean-yNegBtm)/listLength)\n",
+    "  \n",
+    "    cv2.line(line_image,(int(xPosTopSmooth),int(yPosTopSmooth)),(int(xPosBtmSmooth),int(yPosBtmSmooth)),(255,0,0),20)\n",
+    "    cv2.line(line_image,(int(xNegTopSmooth),int(yNegTopSmooth)),(int(xNegBtmSmooth),int(yNegBtmSmooth)),(255,0,0),20)\n",
+    "   \n",
+    "    xPosBtmList.append(xPosBtm)    \n",
+    "    yPosBtmList.append(yPosBtm)\n",
+    "    xPosTopList.append(xPosTop)\n",
+    "    yPosTopList.append(yPosTop)\n",
+    "\n",
+    "    xNegBtmList.append(xNegBtm)\n",
+    "    yNegBtmList.append(yNegBtm)\n",
+    "    xNegTopList.append(xNegTop)\n",
+    "    yNegTopList.append(yNegTop)\n",
+    "\n",
+    "    # Draw the lines on the edge image\n",
+    "    result = cv2.addWeighted(image, .7, line_image, 1, 0)\n",
+    "    return result"
    ]
   },
   {
@@ -331,22 +553,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "def process_image(image):\n",
-    "    # NOTE: The output you return should be a color image (3 channel) for processing video below\n",
-    "    # TODO: put your pipeline here,\n",
-    "    # you should return the final output (image where lines are drawn on lanes)\n",
-    "\n",
-    "    return result"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -356,9 +562,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "white_output = 'test_videos_output/solidWhiteRight.mp4'\n",
@@ -382,11 +586,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
+    "white_output = 'test_videos_output/solidWhiteRight.mp4'\n",
     "HTML(\"\"\"\n",
     "<video width=\"960\" height=\"540\" controls>\n",
     "  <source src=\"{0}\">\n",
@@ -415,9 +618,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "yellow_output = 'test_videos_output/solidYellowLeft.mp4'\n",
@@ -435,7 +636,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -469,11 +670,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
+    "\n",
+    "xPosBtmList=[]\n",
+    "yPosBtmList=[]\n",
+    "xPosTopList=[]\n",
+    "yPosTopList=[]\n",
+    "\n",
+    "xNegBtmList=[]\n",
+    "yNegBtmList=[]\n",
+    "xNegTopList=[]\n",
+    "yNegTopList=[]\n",
     "challenge_output = 'test_videos_output/challenge.mp4'\n",
     "## To speed up the testing process you may want to try your pipeline on a shorter subclip of the video\n",
     "## To do so add .subclip(start_second,end_second) to the end of the line below\n",
@@ -499,6 +709,94 @@
     "</video>\n",
     "\"\"\".format(challenge_output))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#image =  mpimg.imread(\"test_images/\" +imagesToTest[3])\n",
+    "image =  mpimg.imread(\"test_images/solidWhite/frame3.jpg\")\n",
+    "imageToShow = process_image(image)\n",
+    "plt.imshow(imageToShow)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "image =  mpimg.imread(\"test_images/challenge/frame100.jpg\")\n",
+    "#image =  mpimg.imread(\"test_images/\" +imagesToTest[3])\n",
+    "\n",
+    "imgThres= getthresholdedimg(image)\n",
+    "plt.imshow(imgThres)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "image =  mpimg.imread(\"test_images/challenge/frame100.jpg\")\n",
+    "hsv = cv2.cvtColor(image, cv2.COLOR_BGR2HSV)\n",
+    "lower_white = np.array([210,100,130])\n",
+    "upper_white = np.array([255,250,255])\n",
+    "# Threshold the HSV image to get only white colors\n",
+    "mask = cv2.inRange(image, lower_white, upper_white)\n",
+    "# Bitwise-AND mask and original image\n",
+    "res = cv2.bitwise_and(image,image, mask= mask)\n",
+    "kernel = np.ones((25,25), np.uint8)\n",
+    "img_dilation = cv2.dilate(res, kernel, iterations=1)\n",
+    "plt.imshow(img_dilation)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vidcap = cv2.VideoCapture('test_videos/solidWhiteRight.mp4')\n",
+    "success,image = vidcap.read()\n",
+    "\n",
+    "count = 0\n",
+    "success = True\n",
+    "while success or count < 20:\n",
+    "  success,image = vidcap.read()\n",
+    "  print ('Read a new frame: ', success)\n",
+    "  cv2.imwrite(\"frame%d.jpg\" % count, image)     # save frame as JPEG file\n",
+    "  count += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#image =  mpimg.imread(\"test_images/\" +imagesToTest[3])\n",
+    "image =  mpimg.imread(\"test_images/challenge/frame100.jpg\")\n",
+    "imageToShow = process_image(image)\n",
+    "plt.imshow(imageToShow)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#reading in an image\n",
+    "image = mpimg.imread('test_images/solidWhiteRight.jpg')\n",
+    "\n",
+    "#printing out some stats and plotting\n",
+    "print('This image is:', type(image), 'with dimensions:', image.shape)\n",
+    "plt.imshow(image)  # if you wanted to show a single color channel image called 'gray', for example, call as plt.imshow(gray, cmap='gray')"
+   ]
   }
  ],
  "metadata": {
@@ -522,5 +820,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
